# routes/chat/chat.validations.js
@@ -3,6 +3,7 @@ const Joi = require("joi");
 const messageValidationSchema = Joi.object({
   sender_id: Joi.string().uuid().required(),
   receiver_id: Joi.string().uuid().required(),
+  appointment_id: Joi.string().uuid().required(),
   message: Joi.string().min(1).required(),
 });
 
